--- a/Aim!/Base.lproj/Main.storyboard
+++ b/Aim!/Base.lproj/Main.storyboard
@@ -221,6 +221,10 @@
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Q6h-Gh-4B2">
+                                                    <rect key="frame" x="0.0" y="-0.5" width="100" height="100"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                                 <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kyh-Ra-LRz">
                                                     <rect key="frame" x="0.0" y="78" width="100" height="22"/>
                                                     <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -248,6 +252,7 @@
                                         <connections>
                                             <outlet property="backgroundBlackView" destination="kyh-Ra-LRz" id="11t-Vs-sNI"/>
                                             <outlet property="sessionInfoLabel" destination="ssh-v0-26P" id="F2b-fy-ESH"/>
+                                            <outlet property="sessionSnaphotImageView" destination="Q6h-Gh-4B2" id="H4k-9R-RJT"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
